[project]
name = "support-agent-env"
version = "0.1.0"
description = "Customer support agent OpenEnv environment"
authors = [{ name = "Tejas" }]
dependencies = [
    "fastapi",
    "uvicorn",
    "openai",
    "openenv>=0.1.13"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"